Added remove and check buttons

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </div>
         
             <ul id="list-container">
-                <li class="checked">Task1</li>
-                <li>Task2</li>
-                <li>Task3</li>
+                <!-- All tasks will be written here -->
             </ul>
        
     </div>
    </div>
-    <script src="main.js"></script>
+    <script src="main.js">
+
+    </script>
 </body>
 </html>
